Closed Bug 766081 Opened 13 years ago Closed 13 years ago

Cloner.cpp fails to compile when float enabled

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: brbaker, Assigned: brbaker)

References

Details

(Whiteboard: WE:3198938)

Attachments

(1 file)

Attached patch simple fixSplinter Review
Compiling with xcode3 with a float enabled shell, the Cloner.cpp file fails to compile: cc1plus: warnings being treated as errors ../core/Cloner.cpp: In function ‘void avmplus::cloneSlotIntoProperty(avmplus::Cloner&, MMgc::GC*, const avmplus::ScriptObject*, avmplus::ScriptObject*, const intptr_t*)’: ../core/Cloner.cpp:214: warning: ‘value’ may be used uninitialized in this function make: *** [core/Cloner.o] Error 1
changeset: 7441:97b570f0ae5a user: Brent Baker <brbaker@adobe.com> summary: Bug 766081: Cloner.cpp fails to compile when float enabled http://hg.mozilla.org/tamarin-redux/rev/97b570f0ae5a
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: