Bug 766081: Cloner.cpp fails to compile when float enabled

CL@1078824